--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
-        "bulma": "^0.7.4",
-        "node-sass": "^4.11.0"
+        "bulma": "^0.7.4"
     }
 }
