--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
-        "bulma": "^0.7.4"
+        "bulma": "^0.7.4",
+        "express": "^4.16.4",
+        "socket.io": "^2.2.0",
+        "socket.io-client": "^2.2.0"
     }
 }
